--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,14 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
+  <link rel="icon" href="%PUBLIC_URL%/icon.svg" />
+  <meta property="og:image" content="%PUBLIC_URL%/sharing.jpg" />
+  <meta property="og:title"
+    content="Сбер – Титульный партнер Петербургского Международного Экономического Форума - 2021" />
+  <meta name="description" property="og:description"
+    content="Сбер — доверенный помощник и навигатор в меняющемся мире: помогает человеку, бизнесу и стране стабильно развиваться благодаря построению полностью интегрированной экосистемы. Компании Группы покрывают все потребности клиентов в цифровом мире." />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <title>React App</title>
+  <!-- <title>Сбер – Титульный партнер Петербургского Международного Экономического Форума - 2021</title> -->
 </head>
 
 <body>
